tests/js_error/source_locations/statement/for_await/next_call_with_receiver_module.js
var iter = {
  [Symbol.iterator]: function() {
    return {
      next() {
        throw new Error()
      }
    }
  }
}

async function foo() {
  // Error occurs in `next` and points to the `of`
  for await (var x of iter) {}
}

await foo();